x86/include/TestEngine.h


TESTENGINE_API(int32) bccmdCapacitiveSensorRead(uint32 handle, uint16 mask,
                                                uint16 values[]);
TESTENGINE_API(int32) bccmdSetSpiLockCustomerKey(uint32 handle, uint32 custKey[]);
TESTENGINE_API(int32) bccmdGetSpiLockStatus(uint32 handle, uint16* status);
TESTENGINE_API(int32) bccmdSpiLockInitiateLock(uint32 handle);
TESTENGINE_API(int32) teGetChipDisplayName(uint32 handle, uint32 maxLen, char* name);
TESTENGINE_API(int32) teGetChipFamily(uint32 handle, uint8* family);
TESTENGINE_API(int32) teGetChipId(uint32 handle, uint32* chipId);
TESTENGINE_API(int32) teGetPtapHifs(uint16* length, char* hifIds, char* types,
                                    char* names, uint16* count);
TESTENGINE_API(int32) teMcSetXtalFreqTrim(uint32 handle, uint16 trimVal,
                                          int16* mibVal);
TESTENGINE_API(int32) teMcSetXtalLoadCapacitance(uint32 handle, uint16 value);
TESTENGINE_API(int32) teGetBuildId(uint32 handle, uint8 subsystem, uint32* buildId);
TESTENGINE_API(int32) tePioMap(uint32 handle, uint16 bank, uint32 mask, uint32 pios,
                               uint32* errLines);
TESTENGINE_API(int32) tePioSet(uint32 handle, uint16 bank, uint32 mask,
                               uint32 direction, uint32 value, uint32* errLines);
TESTENGINE_API(int32) tePioGet(uint32 handle, uint16 bank, uint32* direction,
                               uint32* value);
TESTENGINE_API(int32) teAudioGetSource(uint32 handle, uint16 device, uint16 iface,
                                       uint16 channel, uint16* sid);
TESTENGINE_API(int32) teAudioCloseSource(uint32 handle, uint16 sid);
TESTENGINE_API(int32) teAudioGetSink(uint32 handle, uint16 device, uint16 iface,
                                     uint16 channel, uint16* sid);
TESTENGINE_API(int32) teAudioCloseSink(uint32 handle, uint16 sid);
TESTENGINE_API(int32) teAudioConnect(uint32 handle, uint16 sourceId, uint16 sinkId,
                                     uint16* tid);
TESTENGINE_API(int32) teAudioDisconnect(uint32 handle, uint16 tid);
TESTENGINE_API(int32) teAudioConfigure(uint32 handle, uint16 sid, uint16 key,
                                       uint32 value);
TESTENGINE_API(int32) teAudioCreateOperator(uint32 handle, uint16 capabilityId,
                                            uint16* operatorId);
TESTENGINE_API(int32) teAudioDestroyOperators(uint32 handle, const uint16 operators[],
                                              uint16 count);
TESTENGINE_API(int32) teAudioOperatorMessage(uint32 handle, uint16 operatorId,
                                             const uint16 message[],
                                             uint16 messageLength);
TESTENGINE_API(int32) teAudioResetOperators(uint32 handle, const uint16 operators[],
                                            uint16 count);
TESTENGINE_API(int32) teAudioStartOperators(uint32 handle, const uint16 operators[],
                                            uint16 count);
TESTENGINE_API(int32) teAudioStopOperators(uint32 handle, const uint16 operators[],
                                           uint16 count);
TESTENGINE_API(int32) teAudioSetAncIirFilter(uint32 handle, uint16 ancInstance,
                                             uint16 pathId, const uint16 coefficients[],
                                             uint16 numCoeffs);
TESTENGINE_API(int32) teAudioSetAncLpfFilter(uint32 handle, uint16 ancInstance,
                                             uint16 pathId, uint16 shift1,
                                             uint16 shift2);
TESTENGINE_API(int32) teAudioStreamAncEnable(uint32 handle, uint16 anc0, uint16 anc1);
TESTENGINE_API(int32) teAudioMicBiasConfigure(uint32 handle, uint16 id, uint16 key,
                                              uint32 value);
TESTENGINE_API(int32) teCapacitiveSensorRead(uint32 handle, uint16 pad, uint32* value);
TESTENGINE_API(int32) teCheckLicense(uint32 handle, uint8 featureId, uint8* result);
TESTENGINE_API(int32) teCheckLicenses(uint32 handle, uint16 numFeatureIds,
                                      const uint16 featureIds[], uint8 results[]);
TESTENGINE_API(int32) teAppDisable(uint32 handle, uint16 reserved);
TESTENGINE_API(int32) teAppWrite(uint32 handle, uint8 channel, const uint16 data[],
                                 uint16 length);
TESTENGINE_API(int32) teAppRead(uint32 handle, uint8* channel, uint16 data[],
                                uint16 dataLength, uint16* readLength,
                                uint16 timeoutMs);
TESTENGINE_API(int32) teAdcGet(uint32 handle, uint16 adc, uint16 delay,
                               uint16 extraFlag, uint16* result);
TESTENGINE_API(int32) teChargerSetConfig(uint32 handle, const uint16 config[]);
TESTENGINE_API(int32) teChargerGetStatus(uint32 handle, uint16* status);
TESTENGINE_API(int32) teNfcConfigure(uint32 handle, uint8 enable);
TESTENGINE_API(int32) teConfigCacheInit(uint32 handle, const char* configDb);
TESTENGINE_API(int32) teConfigCacheRead(uint32 handle, const char* file,
                                        uint16 reserved);
TESTENGINE_API(int32) teConfigCacheMerge(uint32 handle, const char* file);
TESTENGINE_API(int32) teConfigCacheReadItem(uint32 handle, const char* key,
                                            char* value, uint32* maxLen);
TESTENGINE_API(int32) teConfigCacheWriteItem(uint32 handle, const char* key,
                                             const char* value);
TESTENGINE_API(int32) teConfigCacheWrite(uint32 handle, const char* file,
                                         uint16 reserved);
TESTENGINE_API(int32) teChipReset(uint32 handle, uint32 mode);
TESTENGINE_API(int32) teEnableSecurity(uint32 handle, uint32 options);