x86/include/TestEngineAPI.cs


        [DllImport("TestEngine.dll", EntryPoint="bccmdCapacitiveSensorRead",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdCapacitiveSensorRead(uint handle, ushort mask, ushort [] values);

        [DllImport("TestEngine.dll", EntryPoint="bccmdSetSpiLockCustomerKey",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdSetSpiLockCustomerKey(uint handle, uint [] custKey);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetSpiLockStatus",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetSpiLockStatus(uint handle, out ushort status);

        [DllImport("TestEngine.dll", EntryPoint="bccmdSpiLockInitiateLock",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdSpiLockInitiateLock(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="teGetChipDisplayName",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teGetChipDisplayName(uint handle, uint maxLen, StringBuilder name);

        [DllImport("TestEngine.dll", EntryPoint="teGetChipFamily",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teGetChipFamily(uint handle, out byte family);

        [DllImport("TestEngine.dll", EntryPoint="teGetChipId",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teGetChipId(uint handle, out uint chipId);

        [DllImport("TestEngine.dll", EntryPoint="teGetPtapHifs",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teGetPtapHifs(out ushort length, StringBuilder hifIds, StringBuilder types, StringBuilder names, out ushort count);

        [DllImport("TestEngine.dll", EntryPoint="teMcSetXtalFreqTrim",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teMcSetXtalFreqTrim(uint handle, ushort trimVal, out short mibVal);

        [DllImport("TestEngine.dll", EntryPoint="teMcSetXtalLoadCapacitance",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teMcSetXtalLoadCapacitance(uint handle, ushort value);

        [DllImport("TestEngine.dll", EntryPoint="teGetBuildId",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teGetBuildId(uint handle, byte subsystem, out uint buildId);

        [DllImport("TestEngine.dll", EntryPoint="tePioMap",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int tePioMap(uint handle, ushort bank, uint mask, uint pios, out uint errLines);

        [DllImport("TestEngine.dll", EntryPoint="tePioSet",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int tePioSet(uint handle, ushort bank, uint mask, uint direction, uint value, out uint errLines);

        [DllImport("TestEngine.dll", EntryPoint="tePioGet",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int tePioGet(uint handle, ushort bank, out uint direction, out uint value);

        [DllImport("TestEngine.dll", EntryPoint="teAudioGetSource",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioGetSource(uint handle, ushort device, ushort iface, ushort channel, out ushort sid);

        [DllImport("TestEngine.dll", EntryPoint="teAudioCloseSource",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioCloseSource(uint handle, ushort sid);

        [DllImport("TestEngine.dll", EntryPoint="teAudioGetSink",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioGetSink(uint handle, ushort device, ushort iface, ushort channel, out ushort sid);

        [DllImport("TestEngine.dll", EntryPoint="teAudioCloseSink",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioCloseSink(uint handle, ushort sid);

        [DllImport("TestEngine.dll", EntryPoint="teAudioConnect",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioConnect(uint handle, ushort sourceId, ushort sinkId, out ushort tid);

        [DllImport("TestEngine.dll", EntryPoint="teAudioDisconnect",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioDisconnect(uint handle, ushort tid);

        [DllImport("TestEngine.dll", EntryPoint="teAudioConfigure",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioConfigure(uint handle, ushort sid, ushort key, uint value);

        [DllImport("TestEngine.dll", EntryPoint="teAudioCreateOperator",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioCreateOperator(uint handle, ushort capabilityId, out ushort operatorId);

        [DllImport("TestEngine.dll", EntryPoint="teAudioDestroyOperators",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioDestroyOperators(uint handle, ushort [] operators, ushort count);

        [DllImport("TestEngine.dll", EntryPoint="teAudioOperatorMessage",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioOperatorMessage(uint handle, ushort operatorId, ushort [] message, ushort messageLength);

        [DllImport("TestEngine.dll", EntryPoint="teAudioResetOperators",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioResetOperators(uint handle, ushort [] operators, ushort count);

        [DllImport("TestEngine.dll", EntryPoint="teAudioStartOperators",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioStartOperators(uint handle, ushort [] operators, ushort count);

        [DllImport("TestEngine.dll", EntryPoint="teAudioStopOperators",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioStopOperators(uint handle, ushort [] operators, ushort count);

        [DllImport("TestEngine.dll", EntryPoint="teAudioSetAncIirFilter",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioSetAncIirFilter(uint handle, ushort ancInstance, ushort pathId, ushort [] coefficients, ushort numCoeffs);

        [DllImport("TestEngine.dll", EntryPoint="teAudioSetAncLpfFilter",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioSetAncLpfFilter(uint handle, ushort ancInstance, ushort pathId, ushort shift1, ushort shift2);

        [DllImport("TestEngine.dll", EntryPoint="teAudioStreamAncEnable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioStreamAncEnable(uint handle, ushort anc0, ushort anc1);

        [DllImport("TestEngine.dll", EntryPoint="teAudioMicBiasConfigure",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAudioMicBiasConfigure(uint handle, ushort id, ushort key, uint value);

        [DllImport("TestEngine.dll", EntryPoint="teCapacitiveSensorRead",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teCapacitiveSensorRead(uint handle, ushort pad, out uint value);

        [DllImport("TestEngine.dll", EntryPoint="teCheckLicense",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teCheckLicense(uint handle, byte featureId, out byte result);

        [DllImport("TestEngine.dll", EntryPoint="teCheckLicenses",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teCheckLicenses(uint handle, ushort numFeatureIds, ushort [] featureIds, byte [] results);

        [DllImport("TestEngine.dll", EntryPoint="teAppDisable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAppDisable(uint handle, ushort reserved);

        [DllImport("TestEngine.dll", EntryPoint="teAppWrite",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAppWrite(uint handle, byte channel, ushort [] data, ushort length);

        [DllImport("TestEngine.dll", EntryPoint="teAppRead",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAppRead(uint handle, out byte channel, ushort [] data, ushort dataLength, out ushort readLength, ushort timeoutMs);

        [DllImport("TestEngine.dll", EntryPoint="teAdcGet",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teAdcGet(uint handle, ushort adc, ushort delay, ushort extraFlag, out ushort result);

        [DllImport("TestEngine.dll", EntryPoint="teChargerSetConfig",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teChargerSetConfig(uint handle, ushort [] config);

        [DllImport("TestEngine.dll", EntryPoint="teChargerGetStatus",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teChargerGetStatus(uint handle, out ushort status);

        [DllImport("TestEngine.dll", EntryPoint="teNfcConfigure",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teNfcConfigure(uint handle, byte enable);

        [DllImport("TestEngine.dll", EntryPoint="teConfigCacheInit",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teConfigCacheInit(uint handle, String configDb);

        [DllImport("TestEngine.dll", EntryPoint="teConfigCacheRead",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teConfigCacheRead(uint handle, String file, ushort reserved);

        [DllImport("TestEngine.dll", EntryPoint="teConfigCacheMerge",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teConfigCacheMerge(uint handle, String file);

        [DllImport("TestEngine.dll", EntryPoint="teConfigCacheReadItem",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teConfigCacheReadItem(uint handle, String key, StringBuilder value, out uint maxLen);

        [DllImport("TestEngine.dll", EntryPoint="teConfigCacheWriteItem",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teConfigCacheWriteItem(uint handle, String key, String value);

        [DllImport("TestEngine.dll", EntryPoint="teConfigCacheWrite",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teConfigCacheWrite(uint handle, String file, ushort reserved);

        [DllImport("TestEngine.dll", EntryPoint="teChipReset",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teChipReset(uint handle, uint mode);

        [DllImport("TestEngine.dll", EntryPoint="teEnableSecurity",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int teEnableSecurity(uint handle, uint options);
